--- a/lectures/04/style/one.css
+++ b/lectures/04/style/one.css
@@ -18,6 +18,9 @@ div {
     margin: 0 auto;
     width: 810px;
 }
+.text-content.center{
+    text-align: center;
+}
 .content-container {
     width: 938px;
     margin: 0 auto;
@@ -86,4 +89,16 @@ a{
 }
 .special:visited{
     color: rgb(53, 50, 204);
+}
+.link-block{
+    padding: 50px 0;
+}
+.text-content a{
+    display: inline-block;
+    background-color: yellow;
+    padding: 10px;
+    margin-right: 15px;
+}
+.text-content a:last-child{
+    margin-right: 0px;
 }
